--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,35 @@ footer
     font-size:14px;
 } 
 
+/* Responsive Styles */
+@media screen and ( max-width: 768px ) {
+    .profile-imageimg {
+        max-width: 100%;
+    }
+
+    .main-menua ul {
+        flex-direction: column;
+        text-align: center;
+    }
+    .main-menua li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+    
+}
+
+@media only screen and ( max-width: 600px ) {
+
+    h2 {
+        font-size: 28px;
+
+    }
+
+    p {
+        font-size: 16px;
+    }
+}
+
 
 
 
