--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ body {
 header {
     text-align:center;
     padding: 20px;
-    background-color:darkslategray;
+    background-image: url(baccc.png);
+ 
     color: #fff;
 }
 
